<resources>
    <string name="app_name">Contacts</string>
    <string name="title_activity_main">Contacts</string>

    <string name="title_section1">Contacts</string>
    <string name="title_section2">Favorites</string>

    <string name="action_settings">Settings</string>

    <string name="placeholder">Placeholder</string>
    <string name="content_description">image</string>
    <string name="title_activity_contact_detail">Detail</string>

    <string name="action_add">Add</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_contact_editor">Editor</string>
    <string name="action_save">Save</string>
    <string name="title_activity_music">Music</string>
    <string name="action_music">Music</string>
    <string name="facebook_app_id">1650532361845540</string>

    <string-array name="phone_type">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_share">ShareActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_share">Share</string>
    <string name="action_del">Delete</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search...</string>
</resources>
