<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.savvycom.blackcontact.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add_white"/>
    <item
        android:id="@+id/action_music"
        android:title="@string/action_music"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
</menu>
