<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.savvycom.blackcontact.ContactDetailActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_star_white"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit_white"/>
    <item
        android:id="@+id/action_del"
        android:title="@string/action_del"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete_white" />
</menu>
